Fixes images on mobile

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -32,6 +32,11 @@
 		}
 	}
 
+	img {
+		display: block;
+		max-width: 100%;
+	}
+
 	h1 {
 		@include font('body', 'bold');
 		@include font-size(35);
